fix clipping on divide button

--- a/frontend/public/css/_partials/_nav.scss
+++ b/frontend/public/css/_partials/_nav.scss
@@ -22,6 +22,7 @@
 	}
 	.navWidgets {
 		flex-basis: 25%;
+		min-width: 220px;
 		a {
 			&:hover, &:focus, &:active {
 				text-decoration: none;
