--- a/frontend/public/css/_partials/_task-table.scss
+++ b/frontend/public/css/_partials/_task-table.scss
@@ -80,7 +80,7 @@
 			transition: max-width 0.5s ease;
 			margin-right: 1em;
 			.task-edit-btn {
-				width: 3em;
+				width: 4em;
 				height: 2em;
 				margin: 0;
 				padding: 0;
